force-app/main/default/objects/VisualAntidote__Form_Page__c/VisualAntidote__Form_Page__c.object-meta.xml
<CustomObject>
    <label>Form Page</label>
    <nameField>
        <displayFormat>FFP-{000000}</displayFormat>
        <label>Form Page ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>