force-app/main/default/objects/VisualAntidote__Form_Page__c/fields/VisualAntidote__Fields_xml__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Fields_xml__c</fullName>
    <label>Fields xml</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>