force-app/main/default/objects/VisualAntidote__Form_Page__c/fields/VisualAntidote__FieldsObjectXml__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__FieldsObjectXml__c</fullName>
    <label>FieldsObjectXml</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>