force-app/main/default/objects/VisualAntidote__Form_Page__c/fields/VisualAntidote__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>