force-app/main/default/objects/VisualAntidote__Form_Page__c/fields/VisualAntidote__Page_Title__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Page_Title__c</fullName>
    <label>Page Title</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>